Fix CLI option