@@ -4,6 +4,6 @@
 mkdir -p javadoc
 
 cd javadoc
-javadoc -enable-preview -notimestamp ../src/src/dev/davwheat/*.java ../src/src/dev/davwheat/enums/*.java ../src/src/dev/davwheat/exceptions/*.java
+javadoc --enable-preview -notimestamp ../src/src/dev/davwheat/*.java ../src/src/dev/davwheat/enums/*.java ../src/src/dev/davwheat/exceptions/*.java
 
 cd ..
